[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/silent_wolf/Auth/Register.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_color = Color( 0.854902, 0.0901961, 0.0901961, 1 )
font_data = ExtResource( 2 )

[node name="Register" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FormContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 250.0
margin_bottom = 130.0
rect_scale = Vector2( 0.8, 0.8 )
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FormContainer"]
margin_right = 1274.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Sign up"
align = 1

[node name="MainFormContainer" type="HBoxContainer" parent="FormContainer"]
margin_top = 112.0
margin_right = 1274.0
margin_bottom = 505.0
custom_constants/separation = 30
alignment = 1

[node name="FormLabels" type="VBoxContainer" parent="FormContainer/MainFormContainer"]
margin_left = 59.0
margin_right = 684.0
margin_bottom = 393.0
custom_constants/separation = 30

[node name="PlayerNameLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
margin_right = 625.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 1 )
text = "Player name:"

[node name="EmailLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
margin_top = 110.0
margin_right = 625.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 1 )
text = "Email:"

[node name="PasswordLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
margin_top = 212.0
margin_right = 625.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
text = "Password:"

[node name="ConfirmPasswordLabel" type="Label" parent="FormContainer/MainFormContainer/FormLabels"]
margin_top = 314.0
margin_right = 625.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 1 )
text = "Confirm password:"

[node name="FormInputFields" type="VBoxContainer" parent="FormContainer/MainFormContainer"]
margin_left = 714.0
margin_right = 1214.0
margin_bottom = 393.0
custom_constants/separation = 30

[node name="PlayerName" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
margin_right = 500.0
margin_bottom = 78.0
rect_min_size = Vector2( 500, 78 )
custom_fonts/font = SubResource( 2 )
max_length = 30

[node name="Email" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 183.0
rect_min_size = Vector2( 360, 75 )
custom_fonts/font = SubResource( 2 )
max_length = 50

[node name="Password" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
margin_top = 213.0
margin_right = 500.0
margin_bottom = 288.0
rect_min_size = Vector2( 360, 75 )
custom_fonts/font = SubResource( 2 )
max_length = 30

[node name="ConfirmPassword" type="LineEdit" parent="FormContainer/MainFormContainer/FormInputFields"]
margin_top = 318.0
margin_right = 500.0
margin_bottom = 393.0
rect_min_size = Vector2( 360, 75 )
custom_fonts/font = SubResource( 2 )
max_length = 30

[node name="CheckBox" type="CheckBox" parent="FormContainer"]
margin_top = 545.0
margin_right = 1274.0
margin_bottom = 572.0
custom_fonts/font = SubResource( 4 )
text = "Keep my data"

[node name="ErrorMessage" type="Label" parent="FormContainer"]
visible = false
margin_top = 625.0
margin_right = 1274.0
margin_bottom = 662.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.866667, 0.101961, 0.101961, 1 )

[node name="RegisterButton" parent="FormContainer" instance=ExtResource( 3 )]
margin_top = 612.0
margin_right = 1274.0
margin_bottom = 730.0
text = "Submit"
[connection signal="pressed" from="FormContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
